--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Owen Gallagher's keystroke dynamics tool that creates and authenticates users using a username and keystroke signature as the only credentials.",
   "main": "typereader.js",
   "scripts": {
-    "test": "node server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "keystroke",
