--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Owen Gallagher",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "os": "^0.1.1"
   }
